# contract-ai-core

./: .coverage  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.VSCodeCounter/2025-09-20_18-57-44/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2025-09-20_18-59-19/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2025-09-20_18-59-41/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.github/workflows/: ci.yml
dataset/: app.py  load_template.py  prompt.txt  results_1.json  results_2.json  run_classification.py  run_classification_metrics.py  run_extraction.py  run_extraction_metrics.py  run_organizer.py  run_organizer_metrics.py  run_reviewer.py  run_reviser.py  run_reviser_metrics.py  utilities.py  view_organizer.py  view_reviser.py  viewer_classifier.py
dataset/contract_types/: GMRA.json  ISDA.json  ISDA_clauses.csv  ISDA_datapoints.csv  VSA.json  (+6 more)
documentation/: core_library.md  dataset.md  dataset_tools.md  index.md  tools.md
tests/: test_classifier_classify_paragraphs_with_usage.py  test_classifier_prompt_parse.py  test_extractor_extract.py  test_extractor_type_mapping.py  test_imports.py  test_reviser_change_application.py  test_reviser_generate_amended_and_restated.py  test_schema_paragraphs.py
tools/: Home.py  app.py  legal_contract_queries.csv  run_classification.py  run_classification_metrics.py  run_create_db.py  run_extraction.py  run_extraction_metrics.py  run_filter.py  run_filter_metrics.py  run_load_db.py  run_organizer.py  run_organizer_metrics.py  run_reviewer.py  run_sample.py  utilities.py
(+98 files in other folders)
